--- a/views/admin/item/detail_item/show_feature.ejs
+++ b/views/admin/item/detail_item/show_feature.ejs
@@ -67,7 +67,7 @@
                   <td><%= feature[i].qty %></td>
                   <td>
                     <img
-                      src="https://admin-webtravel.herokuapp.com/<%= feature[i].imageUrl %>"
+                      src="https://admin-staycation-ilham.herokuapp.com/<%= feature[i].imageUrl %>"
                       alt="imageUrl"
                       width="70px"
                     />
