--- a/views/admin/bank/table_bank.ejs
+++ b/views/admin/bank/table_bank.ejs
@@ -37,7 +37,7 @@
             <td><%= bank[i].name %></td>
             <td>
               <img
-                src="https://admin-webtravel.herokuapp.com/<%= bank[i].imageUrl %>"
+                src="https://admin-staycation-ilham.herokuapp.com/<%= bank[i].imageUrl %>"
                 alt="imageUrl"
                 width="70px"
               />
