--- a/views/admin/item/show_image_item.ejs
+++ b/views/admin/item/show_image_item.ejs
@@ -11,7 +11,7 @@
       <div class="card shadow mb-4 mt-2">
         <div class="card-body">
           <img
-            src="https://admin-webtravel.herokuapp.com/<%= item.imageId[i].imageUrl %>"
+            src="https://admin-staycation-ilham.herokuapp.com/<%= item.imageId[i].imageUrl %>"
             alt="image"
             style="width: 100%; display: block"
           />
